# legAIlReader

./: repopack-output.txt
LegalAI-Assistant/: README.md  repopack-output.txt
LegalAI-Assistant/backend/: .env  Dockerfile  pyproject.toml
LegalAI-Assistant/backend/app/: main.py
LegalAI-Assistant/backend/app/api/: document.py  support.py
LegalAI-Assistant/backend/app/services/: document_analyzer.py  query_preprocessor.py
LegalAI-Assistant/frontend/: package-lock.json  package.json
LegalAI-Assistant/frontend/.next/: trace
LegalAI-Assistant/frontend/.next/cache/webpack/client-development/: 1.pack  index.pack  index.pack.old
LegalAI-Assistant/frontend/.next/cache/webpack/server-development/: 0.pack  1.pack  index.pack  index.pack.old
LegalAI-Assistant/frontend/.next/server/: _error.js
LegalAI-Assistant/frontend/.next/server/pages/: _app.js  _document.js  _error.js  index.js
LegalAI-Assistant/frontend/.next/static/chunks/: _error.js  amp.js  webpack.js
LegalAI-Assistant/frontend/.next/static/chunks/pages/: index.js
LegalAI-Assistant/frontend/.next/static/webpack/: webpack.05f112e47a77c89e.hot-update.js  webpack.7169e553a4005812.hot-update.js
LegalAI-Assistant/frontend/components/: DocumentAnalyzer.js  QueryPreprocessor.js
LegalAI-Assistant/frontend/pages/: index.js
LegalAI-Assistant/infra/: .env  docker-compose.yml
LegalAI-Assistant/infra/.github/workflows/: ci.yml
LegalAI-Assistant/ml/: Dockerfile  pyproject.toml
LegalAI-Assistant/ml/app/: main.py
