[tool.poetry]
name = "legalai-assistant-ml"
version = "0.1.0"
description = "ML component for LegalAI Assistant"
authors = ["Robert Le <robertle982@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
transformers = "^4.11.3"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"